@@ -208,18 +208,18 @@ char *open_file_dialog(void)
 
 char *appdir(void)
 {
-	static char dir[PATH_MAX];
+	static char dir[PATH_MAX] = "";
 	struct passwd *pw;
 #ifdef _LOCAL_APPDATA
-	if (appdata_sw)
-		strcpy(dir, appdata_sw);
-	else {
+	if (!appdata_sw) {
 		strcpy(dir, game_cwd);
 		strcat(dir, "/appdata");
 	}
-	if (!access(dir, W_OK))
-		return dir;
 #endif
+	if (appdata_sw)
+		strcpy(dir, appdata_sw);
+	if (dir[0] && !access(dir, W_OK))
+		return dir;
 	pw = getpwuid(getuid());
 	if (!pw) 
 		return NULL;
