@@ -4,6 +4,7 @@
   * new: -lang parameter;
   * enh: themes cleanups;
   * new: cmake and LuaJIT build (-DWITH_LUAJIT=1);
+  * fix: -appdata and system build;
   * fix: build with zlib;
   * fix: std.fmt and substitutions ($);
   * fix: segfault on restart;
